samples/_failures_safe/1761320838_221bb4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b4e366b.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_3b4e366b.c:129:12: error: missing terminating " character
  129 |     printf("
      |            ^
./samples/SAFE/__tmp_3b4e366b.c:129:5: error: expected expression at end of input
  129 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_3b4e366b.c:129:5: error: expected declaration or statement at end of input
